2018-05-24         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (add_lint): For no-effect case, also check for
	Op_push_i.  Makes statements consisting of a single constant
	trigger the warning.

2018-05-23         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Updated from GNULIB.

2018-05-14         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Minor edits.

2018-05-13         Arnold D. Robbins     <arnold@skeeve.com>

	* config.sub: Update from GNULIB.

2018-05-03         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (pc/Makefile.tst): New target.
	(dist-hook): Now depends upon pc/Makefile.tst.

2018-04-30         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h [dl_load_func]: Minor improvement in version mismatch
	message as suggested by Manuel Collado
	<m-collado@users.sourceforge.net>.

2018-04-18         Arnold D. Robbins     <arnold@skeeve.com>

	* config.sub: Updated from GNULIB.

2018-04-14         Manuel Collado       <m-collado@users.sourceforge.net>

	* field.c (reset_record): Disable fieldwidth from API
	get_record() if $0 is explicitly assigned a new value.

2018-04-02         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub, install-sh: Updated from GNULIB.

2018-04-01         Arnold D. Robbins     <arnold@skeeve.com>

	Fix a nasty MPFR bug in r_dupnode. If the value being copied
	is MPFN / MPFR, copy those bits over too. Thanks to
	Noah Dean <N.Dean@gaminglabs.com> for the report.

	* node.c (r_dupnode): Check for MPFN / MPFR and copy the bits
	over as needed.

	Unrelated:

	* interpret.h (UNFIELD): Turn into an inline function and
	let UNFIELD macro call it, allows stepping in with a debugger.
	(unfield): Function holding former body of UNFIELD macro.

2018-03-26         Arnold D. Robbins     <arnold@skeeve.com>

	Remove the tail recursion optimization. It's fundamentally
	broken, in the case where a local var becomes a parameter.